# nexenne

./: .clang-format  .clang-tidy  .clang-tidy-tests  .gitattributes  .gitignore  AI_DISCLAIMER.org  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.org  README.org  STYLE_GUIDE.org
examples/: .clang-tidy  CMakeLists.txt
examples/algorithm/: CMakeLists.txt  binary_search.cpp  checksum.cpp  encoding.cpp  graph.cpp  hashing.cpp  numerical.cpp  showcase.cpp  sort.cpp  string.cpp
examples/benchmark/: CMakeLists.txt  compare_sorts.cpp  showcase.cpp
examples/chrono/: CMakeLists.txt  alarm.cpp  countdown.cpp  deadline.cpp  duration_format.cpp  frame_timer.cpp  interval.cpp  profiler.cpp  rate_limiter.cpp  scope_timer.cpp  showcase.cpp  static_stopwatch.cpp  stopwatch.cpp  tick_clock.cpp
examples/container/: CMakeLists.txt  bag.cpp  bimap.cpp  binary_tree.cpp  bitset_dynamic.cpp  bloom_filter.cpp  dense_map.cpp  deque.cpp  error.cpp  flat_hash_map.cpp  flat_hash_set.cpp  flat_map.cpp  flat_set.cpp  format.cpp  gap_buffer.cpp  graph.cpp  hash.cpp  heap.cpp  indexed_priority_queue.cpp  intrusive_list.cpp  linear_arena.cpp  lru_cache.cpp  mpmc_queue.cpp  mpsc_queue.cpp  object_pool.cpp  ring_buffer.cpp  scratch_pad.cpp  showcase.cpp  slot_map.cpp  small_vector.cpp  sparse_set.cpp  spsc_queue.cpp  stable_vector.cpp  static_flat_map.cpp  static_vector.cpp  trie.cpp  union_find.cpp
examples/ecs/: CMakeLists.txt  lifecycle.cpp  queries.cpp  showcase.cpp  signals.cpp  simulation.cpp
examples/filter/: CMakeLists.txt  guards.cpp  robust.cpp  shaping.cpp  showcase.cpp  smoothers.cpp
examples/logging/: CMakeLists.txt  async_sync.cpp  basic.cpp  embedded.cpp  levels.cpp  showcase.cpp  sinks.cpp
examples/math/: CMakeLists.txt  angle.cpp  constants.cpp  curves.cpp  debug.cpp  fixed.cpp  matrices.cpp  power.cpp  rotations.cpp  sampling.cpp  scalar.cpp  showcase.cpp  transforms.cpp  trigonometry.cpp  vectors.cpp
examples/random/: CMakeLists.txt  dice_and_picks.cpp  distributions.cpp  engines.cpp  showcase.cpp
examples/serialization/: CMakeLists.txt  round_trip.cpp  showcase.cpp
examples/signal/: CMakeLists.txt  observer.cpp  showcase.cpp  static_signal.cpp
examples/utility/: CMakeLists.txt  align.cpp  bit.cpp  constexpr_map.cpp  defer.cpp  enum_to_string.cpp  expected_utils.cpp  flags.cpp  function_ref.cpp  hash.cpp  in_place_function.cpp  lazy.cpp  meta.cpp  narrow_cast.cpp  non_null.cpp  overloaded.cpp  scope_guard.cpp  showcase.cpp  source_location_format.cpp  static_string.cpp  strong_typedef.cpp  type_list.cpp  unique_resource.cpp
modules/algorithm/: CMakeLists.txt  module.deps
modules/algorithm/doc/: CMakeLists.txt
modules/algorithm/tests/: CMakeLists.txt  test_binary_search.cpp  test_checksum.cpp  test_encoding.cpp  test_format.cpp  test_graph.cpp  test_hash.cpp  test_numerical.cpp  test_scaffold.cpp  test_sort.cpp  test_string.cpp
modules/benchmark/: CMakeLists.txt  module.deps
modules/benchmark/doc/: CMakeLists.txt  Doxyfile.in
modules/benchmark/tests/: CMakeLists.txt  test_benchmark.cpp
modules/chrono/: CMakeLists.txt
modules/chrono/doc/: CMakeLists.txt  Doxyfile.in
modules/chrono/tests/: CMakeLists.txt  test_clocks.cpp  test_concepts.cpp  test_conversion.cpp  test_duration_parts.cpp  test_frequency.cpp  test_measurement.cpp  test_polling_timers.cpp  test_smoke.cpp  test_stopwatch.cpp
modules/container/: CMakeLists.txt
modules/container/doc/: CMakeLists.txt
modules/container/tests/: CMakeLists.txt  test_bag.cpp  test_bimap.cpp  test_binary_tree.cpp  test_bitset_dynamic.cpp  test_bloom_filter.cpp  test_dense_map.cpp  test_deque.cpp  test_error.cpp  test_flat_hash_map.cpp  test_flat_hash_set.cpp  test_flat_map.cpp  test_flat_set.cpp  test_format.cpp  test_gap_buffer.cpp  test_graph.cpp  test_hash.cpp  test_heap.cpp  test_indexed_priority_queue.cpp  test_intrusive_list.cpp  test_linear_arena.cpp  test_lru_cache.cpp  test_mpmc_queue.cpp  test_mpsc_queue.cpp  test_object_pool.cpp  test_ring_buffer.cpp  test_scratch_pad.cpp  test_slot_map.cpp  test_small_vector.cpp  test_sparse_set.cpp  test_spsc_queue.cpp  test_stable_vector.cpp  test_static_flat_map.cpp  test_static_vector.cpp  test_trie.cpp  test_union_find.cpp
modules/filter/: CMakeLists.txt
modules/filter/doc/: CMakeLists.txt  Doxyfile.in
modules/filter/tests/: CMakeLists.txt  test_concepts.cpp  test_filter.cpp  test_guards.cpp  test_robust.cpp  test_shaping.cpp  test_smoothers.cpp
modules/geometry/: CMakeLists.txt  module.deps
modules/geometry/doc/: CMakeLists.txt  Doxyfile.in
modules/geometry/tests/: CMakeLists.txt  test_foundations.cpp
modules/logging/: CMakeLists.txt
modules/logging/doc/: CMakeLists.txt
modules/logging/tests/: CMakeLists.txt  test_async_sink.cpp  test_config.cpp  test_json_sink.cpp  test_level.cpp  test_logger.cpp  test_manager.cpp  test_multi_sink.cpp  test_pattern_formatter.cpp  test_record.cpp  test_rotating_file_sink.cpp  test_sink.cpp  test_stream_logger.cpp
modules/math/: CMakeLists.txt  module.deps
modules/math/doc/: CMakeLists.txt  Doxyfile.in
modules/math/tests/: CMakeLists.txt  test_angle.cpp  test_curve.cpp  test_euler.cpp  test_fixed.cpp  test_format.cpp  test_foundations.cpp  test_hash.cpp  test_math_accuracy.cpp  test_matrix.cpp  test_matrix_accuracy.cpp  test_power.cpp  test_projection.cpp  test_quaternion.cpp  test_random.cpp  test_scalar.cpp  test_slerp_variants.cpp  test_transform.cpp  test_trigonometry.cpp  test_vector.cpp  test_vector_algorithms.cpp
modules/random/: CMakeLists.txt
modules/random/doc/: CMakeLists.txt  Doxyfile.in
modules/random/tests/: CMakeLists.txt  test_distributions.cpp  test_engines.cpp  test_sample.cpp  test_uniform.cpp
modules/serialization/: CMakeLists.txt
modules/serialization/doc/: CMakeLists.txt  Doxyfile.in
modules/serialization/tests/: CMakeLists.txt  test_binary.cpp  test_cbor.cpp  test_cobs.cpp  test_format.cpp  test_json.cpp  test_msgpack.cpp  test_serialization.cpp  test_serialization_extra.cpp  (+1 more)
modules/signal/: CMakeLists.txt
modules/utility/: CMakeLists.txt
template/module/: CMakeLists.txt
(+427 files in other folders)
