# Example programs: one runnable demo per utility class. Built when
# NEXENNE_BUILD_EXAMPLES is ON (default for a top-level build).
add_subdirectory(utility)
add_subdirectory(container)
add_subdirectory(chrono)
add_subdirectory(random)
add_subdirectory(benchmark)
add_subdirectory(serialization)
add_subdirectory(filter)
add_subdirectory(signal)
